<resources>
    <string name="app_name">MSU Philosophy and Religion</string>
    <string name="app_version">Version 1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_philosphy_home">Philosophy and Religion Home</string>
    <string name="title_activity_news__events">News and Events</string>
    <string name="title_activity_faculty">Faculty</string>
    <string name="title_activity_major">Major</string>
    <string name="religion_major">RELIGION MAJOR</string>
    <string name="title_activity_minor">Minor</string>
    <string name="religion_minor">RELIGION MINOR</string>
    <string name="title_activity_graduates">Graduates</string>
    <string name="title_activity_benfield__prize">Benfield Prize</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_courses">Courses</string>
    <string name="title_activity_msu__home">MSU Home</string>
    <string name="prize_information">David Benfield Philosophy Essay Prize</string>
    <string name="award_date">Spring 2015 Awards</string>
    <string name="first_second">First place $200.00*\nSecond place $100.00*</string>
    <string name="prize_funded">These awards are made possible through a generous grant from the
        Fortune Title Agency of Roseland, NJ.</string>
    <string name="submission_deadline">Submission Deadline: March 13, 2015</string>
    <string name="essay">Essays will be judged by a panel of MSU Philosophy faculty members.
        Winning essays will be selected on the basis of philosophical content, rigor of
        argumentation, style and composition.</string>
    <string name="requirement">Requirements</string>
    <string name="required_info">• Essays on any topic in philosophy may be submitted.\n
        • The author of the essay must be enrolled as a Philosophy Major or Minor at Montclair
        State University.\n
        • The essay may be a revised course essay or a newly composed essay.\n
        • A student may submit only one essay for consideration per year.\n
        • Essays submitted previously may not be submitted a second time.</string>
    <string name="instructions">Instructions</string>
    <string name="instruction_info">• Essays should be formatted properly: standard font, standard
        margins, double-spaced, etc.\n
        • The length of your submission should be between 2,000 and 3,500 words (approximately
        6\u002D12 pages).\n
        • Essays must include a proper bibliography.\n
        • Email your essay as an attachment to Tiger Roholt:</string>
    <string name="prize_contact">roholtt@mail.montclair.edu</string>
    <string name="instruction_info1"> (submit only one of the following file types: \u0022pdf\u0022
        \u0022doc\u0022 \u0022docx\u0022 \u0022pages\u0022)\n
        • Essays should be prepared for blind review (The author\u0027s name should not appear
        anywhere in the essay). The author\u0027s name should appear in the body of the email.</string>
    <string name="winner_info">\u002AFunds will be credited to the winner’s account at Montclair
        State University.</string>
    <string name="courses">Fall 2015 Courses</string>
    <string name="class1">PHIL 270 Philosophy of Mind</string>
    <string name="class1_info">Staff\nT 5:30-8:00pm\nWe will explore the following first order
        questions: Is your mind really just your brain?  Is having a mind the same as having
        a soul? Could humans survive bodily death by uploading their minds to a computer? Could
        a computer ever have qualitative experiences? What makes the mental causally efficacious
        rather than causally inert and epiphenomenal?</string>
    <string name="class2">PHIL 310 Knowledge, Belief \u0026 Truth</string>
    <string name="class2_info">Dr. McDermid\nTR 11:30am\u002D12:45pm\nThis course will survey
        questions about the nature and possibility of knowledge (the study of epistemology).
        It\u0027s easiest to explain what the course is about, by saying it’s about a collection
        of questions like these: What is knowledge? Where do we get knowledge? How do we know we
        know something? What is truth? These are, obviously, pretty abstract questions\u002Dthe
        sort philosophy is famous for. And yet, they do have some practical consequences, depending
        upon how you answer them. We will be investigating both the abstract and the more-concrete
        implications of a wide variety of epistemological positions, from skepticism to naive
        realism, and their intersections with other philosophical issues in metaphysics, ethics,
        political and social philosophy.</string>
    <string name="class3">PHIL 331 History of Philosophy: Ancient</string>
    <string name="class3_info">Dr. Herrera\nW 5:30-8:00pm\nAn introduction to the major figures
        of classical philosophy in the ancient world. The course will focus on the writings of
        Plato and Aristotle, the two greatest and most influential thinkers in ancient philosophy.
        The course will also cover the beginnings of philosophy in the Pre-Socratics. The course
        will examine issues including truth, beauty, and goodness; democracy and freedom;
        knowledge, reason, and experience; and reality, time, space, infinity, and God.</string>
    <string name="class4">PHIL 339 Contemporary Continental Philosophy</string>
    <string name="class4_info">Dr. Roholt\nT 1:00-3:30pm\nThis course surveys the four main
        movements of the continental (European) philosophical tradition: (1) 19th century German
        philosophy, (2) Marxism/critical theory, (3) phenomenology/existentialism, and (4)
        post\u002Dstructuralism/post\u002Dmodernism. This philosophical tradition runs from
        the late 19th Century to the present day. Continental philosophy stands in contrast to
        the dominant, Anglo\u002DAmerican, \u0022analytic\u0022 philosophical tradition. This
        course gives students the opportunity to examine the ways in which continental philosophers
        approach issues in the core subfields of philosophy, such as epistemology, metaphysics,
        ethics, political philosophy, and aesthetics. Students will also have the opportunity to
        explore similarities to and differences from the analytic philosophical tradition. We
        will focus on philosophers such as Hegel, Nietzsche, Marx, Adorno, Heidegger, Merleau\u002D
        Ponty, and Foucault.</string>
    <string name="class5">PHIL 424 Seminar: Women Philosophers</string>
    <string name="class5_info">Dr. Rogers\nR 1:00-3:30pm\nPerhaps the best\u002Dkept secret in
        philosophy is the number of women who were engaged in philosophical discussions alongside
        familiar and influential men in the history of the discipline. In this course, we will read
        works of three major women philosophers: Christine di Pizan\u0027s The Body Politic
        (15th century); Mary Wollstonecraft\u0027s The Vindications (18th century);
        and Simone de Beauvoir\u0027s Ethics of Ambiguity (20th century). The aim of the course
        is threefold: To analyze these works in and of themselves, to understand them in the
        context of the larger philosophical tradition, and to evaluate them in relation to each
        other as part of the \u0022genealogy of women\u0027s thought.\u0022 Please note that
        women philosophers were not necessarily feminists. In this course for instance, only some
        of Wollstonecraft\u0027s work is intentionally feminist. Students interested in studying
        other women philosophers (feminist or not) will have the opportunity to do so, but interest
        in feminism is not necessary to benefit from this course.</string>
    <string-array name="professor_names">
        <item>David Benfield</item>
        <item>Roland Garrett</item>
        <item>Christopher Herrera</item>
        <item>Kirk McDermid</item>
        <item>Dorothy Rogers</item>
        <item>Tiger Roholt</item>
        <item>Mark Clatterbuck</item>
        <item>Cynthia Eller</item>
        <item>Yasir Ibrahim</item>
        <item>Stephen Johnson</item>
        <item>Michael Kogan</item>
        <item>Lise Vail</item>
    </string-array>
    <string-array name="locations">
        <item>448 Dickson Hall</item>
        <item>452 Dickson Hall</item>
        <item>451 Dickson Hall</item>
        <item>444 Dickson Hall</item>
        <item>455 Dickson Hall</item>
        <item>411 Dickson Hall</item>
        <item>443 Dickson Hall</item>
        <item>450 Dickson Hall</item>
        <item>449 Dickson Hall</item>
        <item>453 Dickson Hall</item>
        <item>445 Dickson Hall</item>
        <item>447 Dickson Hall</item>
    </string-array>
    <string-array name="description">
        <item>Professor of Philosophy</item>
        <item>Professor of Philosophy</item>
        <item>Associate Professor of Philosophy</item>
        <item>Assistant Professor of Philosophy</item>
        <item>Associate Professor of Philosophy</item>
        <item>Associate Professor of Philosophy</item>
        <item>Assistant Professor of Religion</item>
        <item>Professor of Religion</item>
        <item>Associate Professor of Religion</item>
        <item>Professor of Religion</item>
        <item>Professor of Religion</item>
        <item>tenured Assistant Professor of Religion</item>
    </string-array>
    <string name="title_activity_faculty__informartion">Faculty Informartion</string>
    <string-array name="phone">
        <item>(973) 655-4438</item>
        <item>(973) 655-5133</item>
        <item>(973) 655-4435</item>
        <item>(973) 655-6975</item>
        <item>(973) 655-7933</item>
        <item>(973) 655-7556</item>
        <item>(973) 655-7414</item>
        <item>(973) 655-7416</item>
        <item>(973) 655-7418</item>
        <item>(973) 655-7415</item>
        <item>(973) 655-5144</item>
        <item>(973) 655-7406</item>
    </string-array>
    <string-array name="email">
        <item>benfieldd@mail.montclair.edu</item>
        <item>garrettr@mail.montclair.edu</item>
        <item>herrerach@mail.montclair.edu</item>
        <item>mcdermidk@mail.montclair.edu</item>
        <item>rogersd@mail.montclair.edu</item>
        <item>roholtt@mail.montclair.edu</item>
        <item>clatterbuckm@mail.montclair.edu</item>
        <item>ellerc@mail.montclair.edu</item>
        <item>ibrahimy@mail.montclair.edu</item>
        <item>johnsons@mail.montclair.edu</item>
        <item>koganm@mail.montclair.edu</item>
        <item>vaill@mail.montclair.edu</item>
    </string-array>
</resources>