<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.candido.msuphilosophyandreligionapp.MSU_Home">
    <item android:id="@+id/action_philosophy_home" android:title="@string/action_philosphy_home"
        android:orderInCategory="1" app:showAsAction="never" />
    <item
        android:orderInCategory="2"
        android:id="@+id/action_bar_news_events"
        android:title="@string/title_activity_news__events"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="7"
        android:id="@+id/action_bar_benfield_prize"
        android:title="@string/title_activity_benfield__prize"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="9"
        android:id="@+id/action_bar_courses"
        android:title="@string/title_activity_courses"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="3"
        android:id="@+id/action_bar_faculty"
        android:title="@string/title_activity_faculty"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="6"
        android:id="@+id/action_bar_graduates"
        android:title="@string/title_activity_graduates"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="4"
        android:id="@+id/action_bar_major"
        android:title="@string/title_activity_major"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="8"
        android:id="@+id/action_bar_map"
        android:title="@string/title_activity_map"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="5"
        android:id="@+id/action_bar_minor"
        android:title="@string/title_activity_minor"
        app:showAsAction="never"/>
    <item
        android:orderInCategory="10"
        android:id="@+id/action_bar_msu_home"
        android:title="@string/title_activity_msu__home"
        app:showAsAction="never"/>
</menu>
